--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "js-musicbot",
-  "description": "🤖 Simple JavaScript music bot that is ready for hosting on nearly any platform!",
-  "repository": "https://github.com/RHGDEV/js-musicbot/",
+  "description": " ",
+  "repository": "",
   "keywords": ["discord", "discordjs", "music", "bot"]
 }
